--- a/models/mart/_mrt_models.yml
+++ b/models/mart/_mrt_models.yml
@@ -20,15 +20,6 @@ models:
             - unique
             - not_null
 
-  - name: dim_match
-    description: This is a dimension model which contains matches. One row per match.
-    columns:
-      - name: dim_match_key
-        description: This is the unique surrogate key of each match
-        tests:
-            - unique
-            - not_null
-
   - name: dim_player
     description: This is a dimension model which contains players. One row per player.
     columns:
@@ -36,4 +27,27 @@ models:
         description: This is the unique surrogate key of each player
         tests:
             - unique
+            - not_null
+
+  - name: fct_match
+    description: This is a fact model which contains match events. One row per match.
+    columns:
+      - name: dim_tournament_key
+        description: This is the foreign key to dim_tournament
+        tests:
+            - not_null
+
+      - name: dim_tournament_date_key
+        description: This is the foreign key to dim_date
+        tests:
+            - not_null
+
+      - name: dim_player_winner_key
+        description: This is the foreign key to dim_player
+        tests:
+            - not_null
+
+      - name: dim_player_loser_key
+        description: This is the foreign key to dim_player
+        tests:
             - not_null
