--- a/models/staging/_src_atp_tour.yml
+++ b/models/staging/_src_atp_tour.yml
@@ -5,5 +5,8 @@ sources:
     schema: raw
     tables:
       - name: countries
+        description: This tables contains raw countries data from the the Rest Countries API, found here - 'https://restcountries.com/v3.1/all'. One row per country. The data is a json blob.
       - name: matches
+        description: This tables contains raw matches data. One row per match.
       - name: players
+        description: This tables contains raw players data. One row per player.
