--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 dbt-duckdb==1.6.0
 duckdb==0.8.1
+fastapi==0.101.1
+pandas==1.5.3
 streamlit==1.25.0
 streamlit-searchbox==0.1.3
 termcolor==2.3.0
-fastapi==0.101.1
 uvicorn[standard]==0.23.2
