Changed the default materialization to table, to avoid json related errors in the query

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -52,7 +52,7 @@ seeds:
 models:
   dbt_atp_tour:
     # Config indicated by + and applies to all files under models/example/
-    +materialized: view
+    +materialized: table
     staging:
       +schema: staging
 
